New implementation of service
